compilador.output
Terminals unused in grammar

    LABEL
    TYPE
    GOTO
    ARRAY
    OF
    ABRE_COLCHETES
    FECHA_COLCHETES
    SEM_PONTO_E_VIRGULA


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 input_idents: IDENT VIRGULA IDENT
    4             | IDENT

    5 $@2: ε

    6 $@3: ε

    7 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 comando_composto

    8 $@4: ε

    9 parte_declara_vars: $@4 VAR declaracao_de_vars
   10                   | ε

   11 declaracao_de_vars: declaracao_de_vars declaracao_de_var
   12                   | declaracao_de_var

   13 $@5: ε

   14 declaracao_de_var: $@5 lista_idents DOIS_PONTOS tipo PONTO_E_VIRGULA

   15 tipo: TIPO

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 comando_composto: T_BEGIN comandos T_END

   19 parte_declara_sub_rotinas: parte_declara_sub_rotinas declara_procedimento
   20                          | parte_declara_sub_rotinas declara_function
   21                          | ε

   22 $@6: ε

   23 declara_procedimento: PROCEDURE IDENT $@6 parametros_formais_ou_nada PONTO_E_VIRGULA bloco_ou_forward_proc PONTO_E_VIRGULA

   24 $@7: ε

   25 parametros_formais_ou_nada: ABRE_PARENTESES $@7 declaracao_params FECHA_PARENTESES
   26                           | ε

   27 $@8: ε

   28 $@9: ε

   29 declara_function: FUNCTION IDENT $@8 parametros_formais_ou_nada DOIS_PONTOS TIPO PONTO_E_VIRGULA $@9 bloco_ou_forward PONTO_E_VIRGULA

   30 declaracao_params: declaracao_params PONTO_E_VIRGULA declaracao_param
   31                  | declaracao_param

   32 $@10: ε

   33 declaracao_param: $@10 lista_params_formais DOIS_PONTOS tipo

   34 lista_params_formais: lista_params_formais VIRGULA parametro
   35                     | parametro

   36 parametro: VAR IDENT
   37          | IDENT

   38 comandos: comandos PONTO_E_VIRGULA comando
   39         | comando
   40         | ε

   41 comando: atribui_ou_func
   42        | comando_composto
   43        | comando_condicional
   44        | comando_repetitivo
   45        | leitura
   46        | escrita

   47 $@11: ε

   48 atribui_ou_func: IDENT $@11 continua_atibui_ou_func

   49 continua_atibui_ou_func: ATRIBUICAO atribui_contiunuacao
   50                        | parametros_ou_nada

   51 $@12: ε

   52 atribui_contiunuacao: $@12 expressao

   53 $@13: ε

   54 funcao_ou_ident: IDENT $@13 parametros_ou_nada

   55 $@14: ε

   56 $@15: ε

   57 parametros_ou_nada: empilha_retorno ABRE_PARENTESES $@14 lista_params $@15 FECHA_PARENTESES
   58                   | empilha_retorno

   59 empilha_retorno: ε

   60 lista_params: lista_params VIRGULA expressao

   61 $@16: ε

   62 lista_params: $@16 expressao

   63 comando_condicional: if_then cond_else

   64 $@17: ε

   65 if_then: IF expressao $@17 THEN comando

   66 cond_else: ELSE comando
   67          | ε

   68 $@18: ε

   69 comando_repetitivo: $@18 WHILE while_resto

   70 $@19: ε

   71 while_resto: expressao $@19 DO comando

   72 expressao: expressao_simples relacao expressao_simples
   73          | expressao_simples

   74 relacao: IGUAL
   75        | MENOR
   76        | MAIOR
   77        | MAIOR_IGUAL
   78        | MENOR_IGUAL
   79        | DIFERENTE

   80 expressao_simples: termo
   81                  | MAIS termo
   82                  | MENOS termo
   83                  | expressao_simples MAIS termo
   84                  | expressao_simples MENOS termo
   85                  | expressao_simples OR termo

   86 bloco_ou_forward_proc: FORWARD

   87 $@20: ε

   88 bloco_ou_forward_proc: $@20 bloco

   89 bloco_ou_forward: FORWARD

   90 $@21: ε

   91 bloco_ou_forward: $@21 bloco

   92 termo: fator
   93      | termo DIV fator
   94      | termo VEZES fator
   95      | termo AND fator

   96 fator: funcao_ou_ident
   97      | NUMERO
   98      | VALOR_BOOL
   99      | ABRE_PARENTESES expressao_simples FECHA_PARENTESES
  100      | NOT fator

  101 leitura: READ ABRE_PARENTESES parametros_de_leitura FECHA_PARENTESES

  102 parametros_de_leitura: parametros_de_leitura VIRGULA parametro_leitura
  103                      | parametro_leitura

  104 parametro_leitura: IDENT

  105 escrita: WRITE ABRE_PARENTESES parametros_de_escrita FECHA_PARENTESES

  106 parametros_de_escrita: parametros_de_escrita VIRGULA parametro_escrita
  107                      | parametro_escrita

  108 parametro_escrita: expressao_simples


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2 25 57 99 101 105
    FECHA_PARENTESES (260) 2 25 57 99 101 105
    VIRGULA (261) 3 16 34 60 102 106
    PONTO_E_VIRGULA (262) 2 14 23 29 30 38
    DOIS_PONTOS (263) 14 29 33
    PONTO (264) 2
    T_BEGIN (265) 18
    T_END (266) 18
    VAR (267) 9 36
    IDENT (268) 2 3 4 16 17 23 29 36 37 48 54 104
    ATRIBUICAO (269) 49
    LABEL (270)
    TYPE (271)
    PROCEDURE (272) 23
    FUNCTION (273) 29
    GOTO (274)
    IF (275) 65
    THEN (276) 65
    ELSE (277) 66
    WHILE (278) 69
    DO (279) 71
    ARRAY (280)
    OF (281)
    ABRE_COLCHETES (282)
    FECHA_COLCHETES (283)
    DIV (284) 93
    AND (285) 95
    NOT (286) 100
    OR (287) 85
    TIPO (288) 15 29
    VALOR_BOOL (289) 98
    NUMERO (290) 97
    MAIOR (291) 76
    MENOR (292) 75
    IGUAL (293) 74
    MENOR_IGUAL (294) 78
    MAIOR_IGUAL (295) 77
    DIFERENTE (296) 79
    MAIS (297) 81 83
    MENOS (298) 82 84
    VEZES (299) 94
    READ (300) 101
    WRITE (301) 105
    FORWARD (302) 86 89
    LOWER_THAN_ELSE (303)
    SEM_PONTO_E_VIRGULA (304)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    programa (51)
        on left: 2
        on right: 0
    $@1 (52)
        on left: 1
        on right: 2
    input_idents (53)
        on left: 3 4
        on right: 2
    bloco (54)
        on left: 7
        on right: 2 88 91
    $@2 (55)
        on left: 5
        on right: 7
    $@3 (56)
        on left: 6
        on right: 7
    parte_declara_vars (57)
        on left: 9 10
        on right: 7
    $@4 (58)
        on left: 8
        on right: 9
    declaracao_de_vars (59)
        on left: 11 12
        on right: 9 11
    declaracao_de_var (60)
        on left: 14
        on right: 11 12
    $@5 (61)
        on left: 13
        on right: 14
    tipo <int_val> (62)
        on left: 15
        on right: 14 33
    lista_idents (63)
        on left: 16 17
        on right: 14 16
    comando_composto (64)
        on left: 18
        on right: 7 42
    parte_declara_sub_rotinas (65)
        on left: 19 20 21
        on right: 7 19 20
    declara_procedimento (66)
        on left: 23
        on right: 19
    $@6 (67)
        on left: 22
        on right: 23
    parametros_formais_ou_nada (68)
        on left: 25 26
        on right: 23 29
    $@7 (69)
        on left: 24
        on right: 25
    declara_function (70)
        on left: 29
        on right: 20
    $@8 (71)
        on left: 27
        on right: 29
    $@9 (72)
        on left: 28
        on right: 29
    declaracao_params (73)
        on left: 30 31
        on right: 25 30
    declaracao_param (74)
        on left: 33
        on right: 30 31
    $@10 (75)
        on left: 32
        on right: 33
    lista_params_formais (76)
        on left: 34 35
        on right: 33 34
    parametro (77)
        on left: 36 37
        on right: 34 35
    comandos (78)
        on left: 38 39 40
        on right: 18 38
    comando (79)
        on left: 41 42 43 44 45 46
        on right: 38 39 65 66 71
    atribui_ou_func (80)
        on left: 48
        on right: 41
    $@11 (81)
        on left: 47
        on right: 48
    continua_atibui_ou_func <int_val> (82)
        on left: 49 50
        on right: 48
    atribui_contiunuacao (83)
        on left: 52
        on right: 49
    $@12 (84)
        on left: 51
        on right: 52
    funcao_ou_ident <int_val> (85)
        on left: 54
        on right: 96
    $@13 (86)
        on left: 53
        on right: 54
    parametros_ou_nada <int_val> (87)
        on left: 57 58
        on right: 50 54
    $@14 (88)
        on left: 55
        on right: 57
    $@15 (89)
        on left: 56
        on right: 57
    empilha_retorno <int_val> (90)
        on left: 59
        on right: 57 58
    lista_params (91)
        on left: 60 62
        on right: 57 60
    $@16 (92)
        on left: 61
        on right: 62
    comando_condicional (93)
        on left: 63
        on right: 43
    if_then (94)
        on left: 65
        on right: 63
    $@17 (95)
        on left: 64
        on right: 65
    cond_else (96)
        on left: 66 67
        on right: 63
    comando_repetitivo (97)
        on left: 69
        on right: 44
    $@18 (98)
        on left: 68
        on right: 69
    while_resto (99)
        on left: 71
        on right: 69
    $@19 (100)
        on left: 70
        on right: 71
    expressao <int_val> (101)
        on left: 72 73
        on right: 52 60 62 65 71
    relacao <str> (102)
        on left: 74 75 76 77 78 79
        on right: 72
    expressao_simples <int_val> (103)
        on left: 80 81 82 83 84 85
        on right: 72 73 83 84 85 99 108
    bloco_ou_forward_proc (104)
        on left: 86 88
        on right: 23
    $@20 (105)
        on left: 87
        on right: 88
    bloco_ou_forward (106)
        on left: 89 91
        on right: 29
    $@21 (107)
        on left: 90
        on right: 91
    termo <int_val> (108)
        on left: 92 93 94 95
        on right: 80 81 82 83 84 85 93 94 95
    fator <int_val> (109)
        on left: 96 97 98 99 100
        on right: 92 93 94 95 100
    leitura (110)
        on left: 101
        on right: 45
    parametros_de_leitura (111)
        on left: 102 103
        on right: 101 102
    parametro_leitura (112)
        on left: 104
        on right: 102 103
    escrita (113)
        on left: 105
        on right: 46
    parametros_de_escrita (114)
        on left: 106 107
        on right: 105 106
    parametro_escrita (115)
        on left: 108
        on right: 106 107


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 7

    input_idents  go to state 8


State 7

    3 input_idents: IDENT • VIRGULA IDENT
    4             | IDENT •

    VIRGULA  shift, and go to state 9

    $default  reduce using rule 4 (input_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    FECHA_PARENTESES  shift, and go to state 10


State 9

    3 input_idents: IDENT VIRGULA • IDENT

    IDENT  shift, and go to state 11


State 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 11

    3 input_idents: IDENT VIRGULA IDENT •

    $default  reduce using rule 3 (input_idents)


State 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    VAR       reduce using rule 8 ($@4)
    $default  reduce using rule 10 (parte_declara_vars)

    bloco               go to state 13
    parte_declara_vars  go to state 14
    $@4                 go to state 15


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 16


State 14

    7 bloco: parte_declara_vars • $@2 parte_declara_sub_rotinas $@3 comando_composto

    $default  reduce using rule 5 ($@2)

    $@2  go to state 17


State 15

    9 parte_declara_vars: $@4 • VAR declaracao_de_vars

    VAR  shift, and go to state 18


State 16

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES input_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 17

    7 bloco: parte_declara_vars $@2 • parte_declara_sub_rotinas $@3 comando_composto

    $default  reduce using rule 21 (parte_declara_sub_rotinas)

    parte_declara_sub_rotinas  go to state 19


State 18

    9 parte_declara_vars: $@4 VAR • declaracao_de_vars

    $default  reduce using rule 13 ($@5)

    declaracao_de_vars  go to state 20
    declaracao_de_var   go to state 21
    $@5                 go to state 22


State 19

    7 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas • $@3 comando_composto
   19 parte_declara_sub_rotinas: parte_declara_sub_rotinas • declara_procedimento
   20                          | parte_declara_sub_rotinas • declara_function

    PROCEDURE  shift, and go to state 23
    FUNCTION   shift, and go to state 24

    $default  reduce using rule 6 ($@3)

    $@3                   go to state 25
    declara_procedimento  go to state 26
    declara_function      go to state 27


State 20

    9 parte_declara_vars: $@4 VAR declaracao_de_vars •
   11 declaracao_de_vars: declaracao_de_vars • declaracao_de_var

    IDENT     reduce using rule 13 ($@5)
    $default  reduce using rule 9 (parte_declara_vars)

    declaracao_de_var  go to state 28
    $@5                go to state 22


State 21

   12 declaracao_de_vars: declaracao_de_var •

    $default  reduce using rule 12 (declaracao_de_vars)


State 22

   14 declaracao_de_var: $@5 • lista_idents DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 29

    lista_idents  go to state 30


State 23

   23 declara_procedimento: PROCEDURE • IDENT $@6 parametros_formais_ou_nada PONTO_E_VIRGULA bloco_ou_forward_proc PONTO_E_VIRGULA

    IDENT  shift, and go to state 31


State 24

   29 declara_function: FUNCTION • IDENT $@8 parametros_formais_ou_nada DOIS_PONTOS TIPO PONTO_E_VIRGULA $@9 bloco_ou_forward PONTO_E_VIRGULA

    IDENT  shift, and go to state 32


State 25

    7 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 • comando_composto

    T_BEGIN  shift, and go to state 33

    comando_composto  go to state 34


State 26

   19 parte_declara_sub_rotinas: parte_declara_sub_rotinas declara_procedimento •

    $default  reduce using rule 19 (parte_declara_sub_rotinas)


State 27

   20 parte_declara_sub_rotinas: parte_declara_sub_rotinas declara_function •

    $default  reduce using rule 20 (parte_declara_sub_rotinas)


State 28

   11 declaracao_de_vars: declaracao_de_vars declaracao_de_var •

    $default  reduce using rule 11 (declaracao_de_vars)


State 29

   17 lista_idents: IDENT •

    $default  reduce using rule 17 (lista_idents)


State 30

   14 declaracao_de_var: $@5 lista_idents • DOIS_PONTOS tipo PONTO_E_VIRGULA
   16 lista_idents: lista_idents • VIRGULA IDENT

    VIRGULA      shift, and go to state 35
    DOIS_PONTOS  shift, and go to state 36


State 31

   23 declara_procedimento: PROCEDURE IDENT • $@6 parametros_formais_ou_nada PONTO_E_VIRGULA bloco_ou_forward_proc PONTO_E_VIRGULA

    $default  reduce using rule 22 ($@6)

    $@6  go to state 37


State 32

   29 declara_function: FUNCTION IDENT • $@8 parametros_formais_ou_nada DOIS_PONTOS TIPO PONTO_E_VIRGULA $@9 bloco_ou_forward PONTO_E_VIRGULA

    $default  reduce using rule 27 ($@8)

    $@8  go to state 38


State 33

   18 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  shift, and go to state 33
    IDENT    shift, and go to state 39
    IF       shift, and go to state 40
    READ     shift, and go to state 41
    WRITE    shift, and go to state 42

    WHILE     reduce using rule 68 ($@18)
    $default  reduce using rule 40 (comandos)

    comando_composto     go to state 43
    comandos             go to state 44
    comando              go to state 45
    atribui_ou_func      go to state 46
    comando_condicional  go to state 47
    if_then              go to state 48
    comando_repetitivo   go to state 49
    $@18                 go to state 50
    leitura              go to state 51
    escrita              go to state 52


State 34

    7 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 comando_composto •

    $default  reduce using rule 7 (bloco)


State 35

   16 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 53


State 36

   14 declaracao_de_var: $@5 lista_idents DOIS_PONTOS • tipo PONTO_E_VIRGULA

    TIPO  shift, and go to state 54

    tipo  go to state 55


State 37

   23 declara_procedimento: PROCEDURE IDENT $@6 • parametros_formais_ou_nada PONTO_E_VIRGULA bloco_ou_forward_proc PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 56

    $default  reduce using rule 26 (parametros_formais_ou_nada)

    parametros_formais_ou_nada  go to state 57


State 38

   29 declara_function: FUNCTION IDENT $@8 • parametros_formais_ou_nada DOIS_PONTOS TIPO PONTO_E_VIRGULA $@9 bloco_ou_forward PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 56

    $default  reduce using rule 26 (parametros_formais_ou_nada)

    parametros_formais_ou_nada  go to state 58


State 39

   48 atribui_ou_func: IDENT • $@11 continua_atibui_ou_func

    $default  reduce using rule 47 ($@11)

    $@11  go to state 59


State 40

   65 if_then: IF • expressao $@17 THEN comando

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64
    MAIS             shift, and go to state 65
    MENOS            shift, and go to state 66

    funcao_ou_ident    go to state 67
    expressao          go to state 68
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71


State 41

  101 leitura: READ • ABRE_PARENTESES parametros_de_leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 72


State 42

  105 escrita: WRITE • ABRE_PARENTESES parametros_de_escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 73


State 43

   42 comando: comando_composto •

    $default  reduce using rule 42 (comando)


State 44

   18 comando_composto: T_BEGIN comandos • T_END
   38 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 74
    T_END            shift, and go to state 75


State 45

   39 comandos: comando •

    $default  reduce using rule 39 (comandos)


State 46

   41 comando: atribui_ou_func •

    $default  reduce using rule 41 (comando)


State 47

   43 comando: comando_condicional •

    $default  reduce using rule 43 (comando)


State 48

   63 comando_condicional: if_then • cond_else

    ELSE  shift, and go to state 76

    $default  reduce using rule 67 (cond_else)

    cond_else  go to state 77


State 49

   44 comando: comando_repetitivo •

    $default  reduce using rule 44 (comando)


State 50

   69 comando_repetitivo: $@18 • WHILE while_resto

    WHILE  shift, and go to state 78


State 51

   45 comando: leitura •

    $default  reduce using rule 45 (comando)


State 52

   46 comando: escrita •

    $default  reduce using rule 46 (comando)


State 53

   16 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 16 (lista_idents)


State 54

   15 tipo: TIPO •

    $default  reduce using rule 15 (tipo)


State 55

   14 declaracao_de_var: $@5 lista_idents DOIS_PONTOS tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 79


State 56

   25 parametros_formais_ou_nada: ABRE_PARENTESES • $@7 declaracao_params FECHA_PARENTESES

    $default  reduce using rule 24 ($@7)

    $@7  go to state 80


State 57

   23 declara_procedimento: PROCEDURE IDENT $@6 parametros_formais_ou_nada • PONTO_E_VIRGULA bloco_ou_forward_proc PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 81


State 58

   29 declara_function: FUNCTION IDENT $@8 parametros_formais_ou_nada • DOIS_PONTOS TIPO PONTO_E_VIRGULA $@9 bloco_ou_forward PONTO_E_VIRGULA

    DOIS_PONTOS  shift, and go to state 82


State 59

   48 atribui_ou_func: IDENT $@11 • continua_atibui_ou_func

    ATRIBUICAO  shift, and go to state 83

    $default  reduce using rule 59 (empilha_retorno)

    continua_atibui_ou_func  go to state 84
    parametros_ou_nada       go to state 85
    empilha_retorno          go to state 86


State 60

   99 fator: ABRE_PARENTESES • expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64
    MAIS             shift, and go to state 65
    MENOS            shift, and go to state 66

    funcao_ou_ident    go to state 67
    expressao_simples  go to state 87
    termo              go to state 70
    fator              go to state 71


State 61

   54 funcao_ou_ident: IDENT • $@13 parametros_ou_nada

    $default  reduce using rule 53 ($@13)

    $@13  go to state 88


State 62

  100 fator: NOT • fator

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    fator            go to state 89


State 63

   98 fator: VALOR_BOOL •

    $default  reduce using rule 98 (fator)


State 64

   97 fator: NUMERO •

    $default  reduce using rule 97 (fator)


State 65

   81 expressao_simples: MAIS • termo

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    termo            go to state 90
    fator            go to state 71


State 66

   82 expressao_simples: MENOS • termo

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    termo            go to state 91
    fator            go to state 71


State 67

   96 fator: funcao_ou_ident •

    $default  reduce using rule 96 (fator)


State 68

   65 if_then: IF expressao • $@17 THEN comando

    $default  reduce using rule 64 ($@17)

    $@17  go to state 92


State 69

   72 expressao: expressao_simples • relacao expressao_simples
   73          | expressao_simples •
   83 expressao_simples: expressao_simples • MAIS termo
   84                  | expressao_simples • MENOS termo
   85                  | expressao_simples • OR termo

    OR           shift, and go to state 93
    MAIOR        shift, and go to state 94
    MENOR        shift, and go to state 95
    IGUAL        shift, and go to state 96
    MENOR_IGUAL  shift, and go to state 97
    MAIOR_IGUAL  shift, and go to state 98
    DIFERENTE    shift, and go to state 99
    MAIS         shift, and go to state 100
    MENOS        shift, and go to state 101

    $default  reduce using rule 73 (expressao)

    relacao  go to state 102


State 70

   80 expressao_simples: termo •
   93 termo: termo • DIV fator
   94      | termo • VEZES fator
   95      | termo • AND fator

    DIV    shift, and go to state 103
    AND    shift, and go to state 104
    VEZES  shift, and go to state 105

    $default  reduce using rule 80 (expressao_simples)


State 71

   92 termo: fator •

    $default  reduce using rule 92 (termo)


State 72

  101 leitura: READ ABRE_PARENTESES • parametros_de_leitura FECHA_PARENTESES

    IDENT  shift, and go to state 106

    parametros_de_leitura  go to state 107
    parametro_leitura      go to state 108


State 73

  105 escrita: WRITE ABRE_PARENTESES • parametros_de_escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64
    MAIS             shift, and go to state 65
    MENOS            shift, and go to state 66

    funcao_ou_ident        go to state 67
    expressao_simples      go to state 109
    termo                  go to state 70
    fator                  go to state 71
    parametros_de_escrita  go to state 110
    parametro_escrita      go to state 111


State 74

   38 comandos: comandos PONTO_E_VIRGULA • comando

    T_BEGIN  shift, and go to state 33
    IDENT    shift, and go to state 39
    IF       shift, and go to state 40
    READ     shift, and go to state 41
    WRITE    shift, and go to state 42

    $default  reduce using rule 68 ($@18)

    comando_composto     go to state 43
    comando              go to state 112
    atribui_ou_func      go to state 46
    comando_condicional  go to state 47
    if_then              go to state 48
    comando_repetitivo   go to state 49
    $@18                 go to state 50
    leitura              go to state 51
    escrita              go to state 52


State 75

   18 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 18 (comando_composto)


State 76

   66 cond_else: ELSE • comando

    T_BEGIN  shift, and go to state 33
    IDENT    shift, and go to state 39
    IF       shift, and go to state 40
    READ     shift, and go to state 41
    WRITE    shift, and go to state 42

    $default  reduce using rule 68 ($@18)

    comando_composto     go to state 43
    comando              go to state 113
    atribui_ou_func      go to state 46
    comando_condicional  go to state 47
    if_then              go to state 48
    comando_repetitivo   go to state 49
    $@18                 go to state 50
    leitura              go to state 51
    escrita              go to state 52


State 77

   63 comando_condicional: if_then cond_else •

    $default  reduce using rule 63 (comando_condicional)


State 78

   69 comando_repetitivo: $@18 WHILE • while_resto

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64
    MAIS             shift, and go to state 65
    MENOS            shift, and go to state 66

    funcao_ou_ident    go to state 67
    while_resto        go to state 114
    expressao          go to state 115
    expressao_simples  go to state 69
    termo              go to state 70
    fator              go to state 71


State 79

   14 declaracao_de_var: $@5 lista_idents DOIS_PONTOS tipo PONTO_E_VIRGULA •

    $default  reduce using rule 14 (declaracao_de_var)


State 80

   25 parametros_formais_ou_nada: ABRE_PARENTESES $@7 • declaracao_params FECHA_PARENTESES

    $default  reduce using rule 32 ($@10)

    declaracao_params  go to state 116
    declaracao_param   go to state 117
    $@10               go to state 118


State 81

   23 declara_procedimento: PROCEDURE IDENT $@6 parametros_formais_ou_nada PONTO_E_VIRGULA • bloco_ou_forward_proc PONTO_E_VIRGULA

    FORWARD  shift, and go to state 119

    $default  reduce using rule 87 ($@20)

    bloco_ou_forward_proc  go to state 120
    $@20                   go to state 121


State 82

   29 declara_function: FUNCTION IDENT $@8 parametros_formais_ou_nada DOIS_PONTOS • TIPO PONTO_E_VIRGULA $@9 bloco_ou_forward PONTO_E_VIRGULA

    TIPO  shift, and go to state 122


State 83

   49 continua_atibui_ou_func: ATRIBUICAO • atribui_contiunuacao

    $default  reduce using rule 51 ($@12)

    atribui_contiunuacao  go to state 123
    $@12                  go to state 124


State 84

   48 atribui_ou_func: IDENT $@11 continua_atibui_ou_func •

    $default  reduce using rule 48 (atribui_ou_func)


State 85

   50 continua_atibui_ou_func: parametros_ou_nada •

    $default  reduce using rule 50 (continua_atibui_ou_func)


State 86

   57 parametros_ou_nada: empilha_retorno • ABRE_PARENTESES $@14 lista_params $@15 FECHA_PARENTESES
   58                   | empilha_retorno •

    ABRE_PARENTESES  shift, and go to state 125

    $default  reduce using rule 58 (parametros_ou_nada)


State 87

   83 expressao_simples: expressao_simples • MAIS termo
   84                  | expressao_simples • MENOS termo
   85                  | expressao_simples • OR termo
   99 fator: ABRE_PARENTESES expressao_simples • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 126
    OR                shift, and go to state 93
    MAIS              shift, and go to state 100
    MENOS             shift, and go to state 101


State 88

   54 funcao_ou_ident: IDENT $@13 • parametros_ou_nada

    $default  reduce using rule 59 (empilha_retorno)

    parametros_ou_nada  go to state 127
    empilha_retorno     go to state 86


State 89

  100 fator: NOT fator •

    $default  reduce using rule 100 (fator)


State 90

   81 expressao_simples: MAIS termo •
   93 termo: termo • DIV fator
   94      | termo • VEZES fator
   95      | termo • AND fator

    DIV    shift, and go to state 103
    AND    shift, and go to state 104
    VEZES  shift, and go to state 105

    $default  reduce using rule 81 (expressao_simples)


State 91

   82 expressao_simples: MENOS termo •
   93 termo: termo • DIV fator
   94      | termo • VEZES fator
   95      | termo • AND fator

    DIV    shift, and go to state 103
    AND    shift, and go to state 104
    VEZES  shift, and go to state 105

    $default  reduce using rule 82 (expressao_simples)


State 92

   65 if_then: IF expressao $@17 • THEN comando

    THEN  shift, and go to state 128


State 93

   85 expressao_simples: expressao_simples OR • termo

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    termo            go to state 129
    fator            go to state 71


State 94

   76 relacao: MAIOR •

    $default  reduce using rule 76 (relacao)


State 95

   75 relacao: MENOR •

    $default  reduce using rule 75 (relacao)


State 96

   74 relacao: IGUAL •

    $default  reduce using rule 74 (relacao)


State 97

   78 relacao: MENOR_IGUAL •

    $default  reduce using rule 78 (relacao)


State 98

   77 relacao: MAIOR_IGUAL •

    $default  reduce using rule 77 (relacao)


State 99

   79 relacao: DIFERENTE •

    $default  reduce using rule 79 (relacao)


State 100

   83 expressao_simples: expressao_simples MAIS • termo

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    termo            go to state 130
    fator            go to state 71


State 101

   84 expressao_simples: expressao_simples MENOS • termo

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    termo            go to state 131
    fator            go to state 71


State 102

   72 expressao: expressao_simples relacao • expressao_simples

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64
    MAIS             shift, and go to state 65
    MENOS            shift, and go to state 66

    funcao_ou_ident    go to state 67
    expressao_simples  go to state 132
    termo              go to state 70
    fator              go to state 71


State 103

   93 termo: termo DIV • fator

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64

    funcao_ou_ident  go to state 67
    fator            go to state 133


State 104

   95 termo: termo AND • fator

    ABRE_PARENTESES  shift, and go to state 60
    IDENT            shift, and go to state 61
    NOT              shift, and go to state 62
    VALOR_BOOL       shift, and go to state 63
    NUMERO           shift, and go to state 64
